--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/personal-finance-core?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/new_schema?autoReconnect=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Gurram@454
-
-spring.jpa.hibernate.ddl-auto : create
-
-
+spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
